--- a/gitops/nginx-deployment.yml
+++ b/gitops/nginx-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
-  namespace: development
+  namespace: staging
 spec:
   selector:
     matchLabels:
