--- a/gitops/nginx-deployment.yml
+++ b/gitops/nginx-deployment.yml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: frontend-deployment
   namespace: staging
 spec:
   selector:
     matchLabels:
-      app: nginx
-  replicas: 2 # tells deployment to run 2 pods matching the template
+      app: frontend
+  replicas: 2
   template:
     metadata:
       labels:
-        app: nginx
+        app: frontend
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: frontend
+        image: alexkainzinger/jku-cloud-native-frontend
         ports:
         - containerPort: 80
